--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,125 +1,79 @@
-<!DOCTYPE html>
-<!-- This site was created in Webflow. https://www.webflow.com --><!-- Last Published: Thu Jun 01 2023 02:55:02 GMT+0000 (Coordinated Universal Time) -->
-<html data-wf-domain="indigofloyds-soybean-website.webflow.io" data-wf-page="6475428339f277007afc47f0"
-    data-wf-site="6475428339f277007afc4798" data-wf-status="1">
-
+<!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
+<!--  Last Published: Thu Jun 08 2023 11:20:59 GMT+0000 (Coordinated Universal Time)  -->
+<html data-wf-page="6475428339f277007afc47f0" data-wf-site="6475428339f277007afc4798">
 <head>
-    <meta charset="utf-8" />
-    <title>Contact us</title>
-    <meta content="width=device-width, initial-scale=1" name="viewport" />
-    <meta content="Webflow" name="generator" />
-    <link
-        href="https://uploads-ssl.webflow.com/6475428339f277007afc4798/css/indigofloyds-soybean-website.webflow.af14dded0.css"
-        rel="stylesheet" type="text/css" />
-    <link href="https://fonts.googleapis.com" rel="preconnect" />
-    <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous" />
-    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
-    <script
-        type="text/javascript">WebFont.load({ google: { families: ["Open Sans:300,300italic,400,400italic,600,600italic,700,700italic,800,800italic", "Roboto:300,regular,500"] } });</script>
-    <script
-        type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script>
-    <link href="https://uploads-ssl.webflow.com/img/favicon.ico" rel="shortcut icon" type="image/x-icon" />
-    <link href="https://uploads-ssl.webflow.com/img/webclip.png" rel="apple-touch-icon" />
+  <meta charset="utf-8">
+  <title>Contact</title>
+  <meta content="width=device-width, initial-scale=1" name="viewport">
+  <meta content="Webflow" name="generator">
+  <link href="../static/css/normalize.css" rel="stylesheet" type="text/css">
+  <link href="../static/css/webflow.css" rel="stylesheet" type="text/css">
+  <link href="../static/css/indigofloyds-soybean-website.webflow.css" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com" rel="preconnect">
+  <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
+  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
+  <script type="text/javascript">WebFont.load({  google: {    families: ["Open Sans:300,300italic,400,400italic,600,600italic,700,700italic,800,800italic","PT Serif:400,400italic,700,700italic","Roboto:300,regular,500"]  }});</script>
+  <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
+  <link href="../static/images/favicon.ico" rel="shortcut icon" type="image/x-icon">
+  <link href="../static/images/webclip.png" rel="apple-touch-icon">
 </head>
-
 <body>
-    <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease"
-        role="banner" class="navigation-bar w-nav">
-        <div class="w-container"><a href="/" class="brand-link w-nav-brand"><img
-                    src="https://uploads-ssl.webflow.com/6475428339f277007afc4798/6477f46c74c85d877d1ee6f2_logo2.jpg"
-                    loading="lazy" width="50" sizes="50px"
-                    srcset="https://uploads-ssl.webflow.com/6475428339f277007afc4798/6477f46c74c85d877d1ee6f2_logo2-p-500.jpg 500w, https://uploads-ssl.webflow.com/6475428339f277007afc4798/6477f46c74c85d877d1ee6f2_logo2-p-800.jpg 800w, https://uploads-ssl.webflow.com/6475428339f277007afc4798/6477f46c74c85d877d1ee6f2_logo2-p-1080.jpg 1080w, https://uploads-ssl.webflow.com/6475428339f277007afc4798/6477f46c74c85d877d1ee6f2_logo2-p-1600.jpg 1600w, https://uploads-ssl.webflow.com/6475428339f277007afc4798/6477f46c74c85d877d1ee6f2_logo2.jpg 1683w"
-                    alt="" class="image-3" />
-                <h1 class="brand-text">soyDNGP<br /></h1>
-            </a>
-            <nav role="navigation" class="navigation-menu w-nav-menu"><a href="/"
-                    class="navigation-link w-nav-link">Home</a><a href="/contact" aria-current="page"
-                    class="navigation-link w-nav-link w--current">Contact</a></nav>
-            <div class="hamburger-button w-nav-button">
-                <div class="w-icon-nav-menu"></div>
-            </div>
+  <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navigation-bar w-nav">
+    <div class="w-container">
+      <a href="/" class="brand-link w-nav-brand"><img src="../static/images/logo2.jpg" loading="lazy" width="50" sizes="50px" srcset="../static/images/logo2-p-500.jpg 500w, ../static/images/logo2-p-800.jpg 800w, ../static/images/logo2-p-1080.jpg 1080w, ../static/images/logo2-p-1600.jpg 1600w, ../static/images/logo2.jpg 1683w" alt="" class="image-3">
+        <h1 class="brand-text">soyDNGP<br></h1>
+      </a>
+      <nav role="navigation" class="navigation-menu w-nav-menu">
+        <a href="/" class="navigation-link w-nav-link">Home</a>
+        <a href="/contact" aria-current="page" class="navigation-link w-nav-link w--current">Contact</a>
+        <a href="/LearnMore" class="navigation-link w-nav-link">Learn More</a>
+      </nav>
+      <div class="hamburger-button w-nav-button">
+        <div class="w-icon-nav-menu"></div>
+      </div>
+    </div>
+  </div>
+  <div class="section wf-section">
+    <div class="w-container">
+      <div class="section-title-group">
+        <h2 class="section-heading centered">Contact Us Today</h2>
+      </div>
+      <p class="paragraph-4">    We highly value your thoughts, questions, and feedback. If you need assistance navigating our webserver, require more information about SoyDNGP, or wish to share your insights and experiences, please don&#x27;t hesitate to get in touch.For general inquiries, you can<strong> reach out to us</strong> at <strong>wangxt881@gmail.com</strong>. <br>    For technical support or assistance with the prediction models, please contact our dedicated <strong>support team</strong> at <strong>1798354140@qq.com</strong>.We strive to respond to all inquiries as promptly as possible. <br>    Additionally, you are encouraged to consult our Frequently Asked Questions (FAQ) section for quick answers to common questions about SoyDNGP. We look forward to hearing from you and assisting you with your research endeavors!</p>
+      <div class="form-wrapper w-form">
+        <form id="email-form" name="email-form" data-name="Email Form" action="/send" method="post" class="form"><input type="text" class="form-field w-input" maxlength="256" name="Name" data-name="Name" placeholder="Enter your name..." id="Name" required=""><input type="email" class="form-field w-input" maxlength="256" name="Email" data-name="Email" placeholder="Enter your email..." id="Email" required=""><textarea id="field-2" name="field-2" maxlength="5000" data-name="Field 2" placeholder="Message" class="form-field text-area w-input"></textarea><input type="submit" value="Send Carrier Pigeon" data-wait="Please wait..." class="button full-width w-button"></form>
+        <div class="w-form-done">
+          <p>Thank you! Your submission has been received!</p>
         </div>
-    </div>
-    <div class="section wf-section">
-        <div class="w-container">
-            <div class="section-title-group">
-                <h2 class="section-heading centered">Contact Us Today</h2>
-            </div>
-            <p>We highly value your thoughts, questions, and feedback. If you need assistance navigating our webserver,
-                require more information about SoyDNGP, or wish to share your insights and experiences, please
-                don&#x27;t hesitate to get in touch.For general inquiries, you can reach out to us at
-                wangxt881@gmail.com. <br />For technical support or assistance with the prediction models, please
-                contact our dedicated support team at [1798354140@qq.com].We strive to respond to all inquiries as
-                promptly as possible. <br />Additionally, you are encouraged to consult our Frequently Asked Questions
-                (FAQ) section for quick answers to common questions about SoyDNGP. We look forward to hearing from you
-                and assisting you with your research endeavors!</p>
-            <div class="form-wrapper w-form">
-                <form id="email-form" name="email-form" data-name="Email Form" method="post" action="/send" class="form"><input
-                        type="text" class="form-field w-input" maxlength="256" name="Name" data-name="Name"
-                        placeholder="Enter your name..." id="Name" required="" /><input type="email"
-                        class="form-field w-input" maxlength="256" name="Email" data-name="Email"
-                        placeholder="Enter your email..." id="Email" required="" /><textarea id="field-2" name="field-2"
-                        maxlength="5000" data-name="Field 2" placeholder="Message"
-                        class="form-field text-area w-input"></textarea><input type="submit" value="Send Carrier Pigeon"
-                        data-wait="Please wait..." class="button full-width w-button" /></form>
-                <div class="w-form-done">
-                    <p>Thank you! Your submission has been received!</p>
-                </div>
-                <div class="w-form-fail">
-                    <p>Oops! Something went wrong while submitting the form :(</p>
-                </div>
-            </div>
+        <div class="w-form-fail">
+          <p>Oops! Something went wrong while submitting the form :(</p>
         </div>
+      </div>
     </div>
-    <div class="footer wf-section">
-        <div class="w-container">
-            <div class="w-row">
-                <div class="spc w-col w-col-4">
-                    <h5 class="heading-2">aBOUT SoyDNGP</h5>
-                    <p class="paragraph">SoyDNGP, an advanced webserver designed to utilize the power of convolutional
-                        neural network-based models for the prediction of agronomic traits in soybean. Built to serve
-                        the burgeoning field of agriculture, our server supports the analysis of a comprehensive range
-                        of traits.</p>
-                </div>
-                <div class="spc w-col w-col-4">
-                    <h5>useful links</h5><a href="https://www.soybase.org/snps/" class="footer-link">the SoyBase SNP
-                        page</a><a href="https://npgsweb.ars-grin.gov/gringlobal/descriptors"
-                        class="footer-link">GRIN-Global website</a>
-                </div>
-                <div class="w-col w-col-4">
-                    <h5>social</h5>
-                    <div class="footer-link-wrapper w-clearfix"><img
-                            src="https://uploads-ssl.webflow.com/6475428339f277007afc4798/6475428339f277007afc4839_social-18.svg"
-                            width="20" alt="" class="info-icon" /><a href="#" class="footer-link with-icon">Twitter</a>
-                    </div>
-                    <div class="footer-link-wrapper w-clearfix"><img
-                            src="https://uploads-ssl.webflow.com/6475428339f277007afc4798/6475428339f277007afc481a_social-03.svg"
-                            width="20" alt="" class="info-icon" /><a href="#" class="footer-link with-icon">Facebook</a>
-                    </div>
-                    <div class="footer-link-wrapper w-clearfix"><img
-                            src="https://uploads-ssl.webflow.com/6475428339f277007afc4798/6475428339f277007afc4826_social-33.svg"
-                            width="20" alt="" class="info-icon" /><a
-                            href="https://github.com/IndigoFloyd/SoybeanWebsite"
-                            class="footer-link with-icon">GitHub</a></div>
-                </div>
-            </div>
+  </div>
+  <div class="footer wf-section">
+    <div class="w-container">
+      <div class="w-row">
+        <div class="spc w-col w-col-6">
+          <h5 class="heading">aBOUT SoyDNGP</h5>
+          <p class="paragraph-3">SoyDNGP, an advanced webserver designed to utilize the power of convolutional neural network-based models for the prediction of agronomic traits in soybean. Built to serve the burgeoning field of agriculture, our server supports the analysis of a comprehensive range of traits.</p>
         </div>
+        <div class="spc w-col w-col-6">
+          <h5>useful links</h5>
+          <a href="https://www.soybase.org/snps/" class="footer-link">the SoyBase SNP page</a>
+          <a href="https://npgsweb.ars-grin.gov/gringlobal/descriptors" class="footer-link">GRIN-Global website</a>
+          <div class="footer-link-wrapper w-clearfix"><img src="../static/images/social-33.svg" width="20" alt="" class="info-icon">
+            <a href="https://github.com/IndigoFloyd/SoybeanWebsite" class="footer-link with-icon">GitHub</a>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="footer center wf-section">
-        <div class="w-container">
-            <div class="footer-text">CopyRight © 2020 ~ 2021 National Key Laboratory of Crop Genetic Improvement,
-                Huazhong Agricultural University</div>
-        </div><img
-            src="https://uploads-ssl.webflow.com/6475428339f277007afc4798/64754ff5c9934aa246268288_-nre42yj30rlfcjd7-001.png"
-            loading="lazy" width="100" height="100"
-            srcset="https://uploads-ssl.webflow.com/6475428339f277007afc4798/64754ff5c9934aa246268288_-nre42yj30rlfcjd7-001-p-500.png 500w, https://uploads-ssl.webflow.com/6475428339f277007afc4798/64754ff5c9934aa246268288_-nre42yj30rlfcjd7-001.png 770w"
-            sizes="100px" alt="" />
-    </div>
-    <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6475428339f277007afc4798"
-        type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-        crossorigin="anonymous"></script>
-    <script src="https://uploads-ssl.webflow.com/6475428339f277007afc4798/js/webflow.7382aa6cc.js"
-        type="text/javascript"></script>
+  </div>
+  <div class="footer center footer2 wf-section">
+    <div class="w-container">
+      <div class="footer-text">CopyRight © 2020 ~ 2021 National Key Laboratory of Crop Genetic Improvement, Huazhong Agricultural University</div>
+    </div><img src="../static/images/-nre42yj30rlfcjd7-001.png" loading="lazy" width="100" height="100" srcset="../static/images/-nre42yj30rlfcjd7-001-p-500.png 500w, ../static/images/-nre42yj30rlfcjd7-001.png 770w" sizes="100px" alt="">
+  </div>
+  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6475428339f277007afc4798" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script src="../static/js/webflow.js" type="text/javascript"></script>
 </body>
-
 </html>
